Add template create/read API (#8)
* OpenAPI spec for creating and reading templates (list, update etc to
come)
* Format to consistent tabs rather than spaces
* Improve project directory structure a bit
